--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,14 @@
 <head>
     <base href="">
     <meta charset="utf-8"/>
-    <meta name="description" content="Logicièle de gestion commerciale ROMAS SIG COM WEB"/>
-    <meta name="keywords" content="gestion commerciale"/>
+    <meta name="description" content="Logicièle de gestion commerciale et de stock"/>
+    <meta name="keywords" content="Gestion stock"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="ROMSA SIG COM WEB"/>
+    <meta property="og:title" content="GESTION STOCK"/>
     <meta property="og:url" content="#"/>
-    <meta property="og:site_name" content="ROMAS SIG COM WEB"/>
+    <meta property="og:site_name" content="GESTION STOCK"/>
     <title>
         {% block title %}
             Administration
@@ -19,7 +19,7 @@
     </title>
     {% block stylesheets %}
         <link rel="canonical" href=""/>
-        <link rel="shortcut icon" href="{{ asset('assets/media/logos/favicon.png') }}"/>
+        <link rel="shortcut icon" href="{{ asset('assets/media/logos/icone.png') }}"/>
         <!--begin::Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>
         <!--end::Fonts-->
@@ -995,9 +995,8 @@
                             class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
                         <!--begin::Copyright-->
                         <div class="text-dark order-2 order-md-1">
-                            <span class="text-muted fw-bold me-1">2023©</span>
-                            <a href="https://romastechnologie.com" target="_blank" class="text-gray-800 text-hover-primary">ROMAS
-                                Technologie</a>
+                            <span class="text-muted fw-bold me-1">2024©</span>
+                            <a href="#" target="_blank" class="text-gray-800 text-hover-primary">K.Y.P</a>
                         </div>
                         <!--end::Copyright-->
                         <!--begin::Menu-->
