--- a/templates/produit/partials/_form.html.twig
+++ b/templates/produit/partials/_form.html.twig
@@ -28,14 +28,14 @@
                 </span>
             </label>
         </div>
-        <div class="col-md-3 fv-row box d-flex flex-column justify-content-center align-items-start mt-6">
+        {# <!--<div class="col-md-3 fv-row box d-flex flex-column justify-content-center align-items-start mt-6">
             <label class="form-check form-check-sm form-check-custom form-check-solid float-start">
                 {{ form_widget(form.estModeCarreau) }}
                 <span class="form-check-label">
                     {{ form.estModeCarreau.vars.label }}
                 </span>
             </label>
-        </div>
+        </div>--> #}
     </div>
     <div class="form-group row ">
         <div class="col-md-4  fv-row">
