--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-0">
 					<!--begin::Logo-->
 					<a href="#" class="mb-12 mt-10">
-						<img alt="Logo" src="{{ asset('assets/media/logos/logo_romas2.png') }}" class="h-40px" />
+						<img alt="Logo" src="{{ asset('assets/media/logos/lobo.webp') }}" class="h-90px" />
 					</a>
 					<!--end::Logo-->
 
