--- a/templates/layouts/menu.html.twig
+++ b/templates/layouts/menu.html.twig
@@ -6,7 +6,7 @@
     <div class="aside-logo flex-column-auto" id="kt_aside_logo">
         <!--begin::Logo-->
         <a href="">
-            <img alt="Logo" src="{{ asset('assets/media/logos/logo_romas2.png') }}" class="h-35px logo"/>
+            <img alt="Logo" src="{{ asset('assets/media/logos/lobo.webp') }}" class="h-90px logo"/>
             {# <span style="font-size:25px; color:#fff">R-SIGCOM</span> #}
         </a>
         <!--end::Logo-->
