--- a/templates/layouts/usermenu.html.twig
+++ b/templates/layouts/usermenu.html.twig
@@ -32,6 +32,10 @@
                 
                 <i class="bi bi-arrow-repeat ms-3 fs-5"></i>
             </span>
+             <div class="separator mb-2"></div>
+            <a href="{{ path('app_utilisateur_update_password') }}" class="menu-link px-5 text-center">
+                Changez votre mot de passe
+            </a>
         <div class="separator mb-2"></div>
         <!--end::Menu separator-->
         <!--begin::Menu item-->
@@ -39,60 +43,6 @@
             <a href="#" class="menu-link px-5">Mon compte</a>
         </div> #}
         <!--end::Menu item-->
-        <!--begin::Menu item-->
-        <div class="menu-item px-5" data-kt-menu-trigger="hover" data-kt-menu-placement="left-start">
-            <a href="#" class="menu-link px-5">
-                <span class="menu-title">Mon abonnement</span>
-                <span class="menu-arrow"></span>
-            </a>
-            <!--begin::Menu sub-->
-            <div class="menu-sub menu-sub-dropdown w-175px py-4">
-                <!--begin::Menu item-->
-                <div class="menu-item px-3">
-                    <a href="#" class="menu-link px-5">Licence</a>
-                </div>
-                <!--end::Menu item-->
-                <!--begin::Menu item-->
-                <div class="menu-item px-3">
-                    <a href="#" class="menu-link px-5">Mes paiements</a>
-                </div>
-                <div class="menu-item px-3">
-                    <a href="{{ path('app_utilisateur_update_password') }}" class="menu-link px-5">
-                        Changez votre mot de passe
-                    </a>
-                </div>
-                <!--end::Menu item-->
-                <!--begin::Menu item-->
-                {# <div class="menu-item px-3">
-                    <a href="#" class="menu-link px-5">Paiements</a>
-                </div> #}
-                <!--end::Menu item-->
-                <!--begin::Menu item-->
-                {# <div class="menu-item px-3">
-                    <a href="#" class="menu-link d-flex flex-stack px-5">Statements
-                        <i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip" title="View your statements"></i></a>
-                </div> #}
-                <!--end::Menu item-->
-                <!--begin::Menu separator-->
-                {# <div class="separator my-2"></div> #}
-                <!--end::Menu separator-->
-                <!--begin::Menu item-->
-                {# <div class="menu-item px-3">
-                    <div class="menu-content px-3">
-                        <label class="form-check form-switch form-check-custom form-check-solid">
-                            <input class="form-check-input w-30px h-20px" type="checkbox" value="1" checked="checked" name="notifications" />
-                            <span class="form-check-label text-muted fs-7">Notifications</span>
-                        </label>
-                    </div>
-                </div> #}
-                <!--end::Menu item-->
-            </div>
-            <!--end::Menu sub-->
-        </div>
-        <!--end::Menu item-->
-        <!--begin::Menu separator-->
-        <div class="separator my-2"></div>
-        <!--end::Menu separator-->
         <!--begin::Menu item-->
         {# <div class="menu-item px-5" data-kt-menu-trigger="hover" data-kt-menu-placement="left-start">
             <a href="#" class="menu-link px-5">
