--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -6,14 +6,8 @@
 		<title> Réinitialisation du mot de passe </title>
 		<meta charset="utf-8" />
 		<meta name="description" content=" Athentification " />
-		<meta name="keywords" content="romassigcom" />
+		<meta name="keywords" content="gestionStock" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta property="og:locale" content="en_US" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Authentificatio ROMAS SIG COM" />
-		<meta property="og:url" content="#" />
-		<meta property="og:site_name" content="Keenthemes | Metronic" />
-		<link rel="canonical" href="https://preview.keenthemes.com/metronic8" />
 		<link rel="shortcut icon" href="{{ asset('assets/media/logos/favicon.ico') }}" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
@@ -38,7 +32,7 @@
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-0">
 					<!--begin::Logo-->
 					<a href="#" class="mb-12 mt-10">
-						<img alt="Logo" src="{{ asset('assets/media/logos/logo_romas2.png') }}" class="h-40px" />
+						<img alt="Logo" src="{{ asset('assets/media/logos/lobo.webp') }}" class="h-40px" />
 					</a>
 					<!--end::Logo-->
 
@@ -65,7 +59,7 @@
 					<!--begin::Links-->
 					<div class="d-flex align-items-center fw-bold fs-6">
 						<a href="#" class="text-muted text-hover-primary px-2">Introduction</a>
-						<a href="mailto:romastechnologie@gmail.com" class="text-muted text-hover-primary px-2">Contact</a>
+						<a href="mailto:paulk379@gmail.com" class="text-muted text-hover-primary px-2">Contact</a>
 						<a href="#" class="text-muted text-hover-primary px-2">A propos</a>
 					</div>
 					<!--end::Links-->
