Nommenclature de service

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1186,7 +1186,7 @@ formN.find('button[type="submit"]').prop('disabled', false);
 		 $.ajax({
 			url: testXXpath,
 			dataType: "Json",
-			type: "POST",
+			type: "GET",
 			success: function (resulta) {
 				console.log("Suppression fait correctement")
 			},
