--- a/templates/famille/partials/_card_form.html.twig
+++ b/templates/famille/partials/_card_form.html.twig
@@ -16,7 +16,7 @@
                                 </svg>
                             </span>
             <!--end::Svg Icon-->
-            <h2>Enregistrement d'une Famille</h2>
+            <h2>Enregistrement d'une catégorie</h2>
         </div>
         <!--end::Card title-->
     </div>
