--- a/templates/famille/index.html.twig
+++ b/templates/famille/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Familles{% endblock %}
+{% block title %}Catégorie de produit{% endblock %}
 
 {% block body %}
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
@@ -11,7 +11,7 @@
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
-                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Famille</h1>
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Catégorie</h1>
                     <!--end::Title-->
                     <!--begin::Separator-->
                     <span class="h-20px border-gray-300 border-start mx-4"></span>
@@ -37,7 +37,7 @@
                         </li>
                         <!--end::Item-->
                         <!--begin::Item-->
-                        <li class="breadcrumb-item text-dark">Famille</li>
+                        <li class="breadcrumb-item text-dark">Catégorie</li>
                         <!--end::Item-->
                     </ul>
                     <!--end::Breadcrumb-->
@@ -62,7 +62,7 @@
                                     <span class="menu-bullet">
                                         <span class="bullet bullet-dot"></span>
                                     </span>
-                                    <span class="menu-title">Ajouter une famille</span>
+                                    <span class="menu-title">Ajouter une catégorie</span>
                                 </a>
                             </div>
                             <div class="menu-item">
@@ -71,7 +71,7 @@
                                     <span class="menu-bullet">
                                         <span class="bullet bullet-dot"></span>
                                     </span>
-                                    <span class="menu-title">Liste des familles</span>
+                                    <span class="menu-title">Liste des catégories</span>
                                 </a>
                             </div>
                         </div>
