--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -46,7 +46,7 @@
 			<!--begin::Authentication - Sign-in -->
 			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" 
 			{# style="background-image: url({{ asset('assets/media/illustrations/sketchy-1/14-dark.png') }}" #}
-			style="background-image: url({{ asset('assets/back.jpg') }});background-size: cover;"
+			style="background-image: url({{ asset('assets/boire.jpg') }});background-size: cover;"
 			>
 				<!--begin::Content-->
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-0">
