--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,10 +3,10 @@
 	<!--begin::Head-->
 	<head>
 		<base href="../../../">
-		<title> Connexion </title>
+		<title> Se connecter </title>
 		<meta charset="utf-8" />
 		<link rel="canonical" href="#" />
-		<link rel="shortcut icon" href="{{ asset('assets/media/logos/favicon.png') }}" />
+		<link rel="shortcut icon" href="{{ asset('assets/media/logos/icone.png') }}" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
 		<!--end::Fonts-->
@@ -25,7 +25,7 @@
 			<!--begin::Authentication - Sign-in -->
 			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" 
 			{# style="background-image: url({{ asset('assets/media/illustrations/sketchy-1/14-dark.png') }}" #}
-			style="background-image: url({{ asset('assets/back.jpg') }});background-size: cover;"
+			style="background-image: url({{ asset('assets/boire.jpg') }});background-size: cover;"
 			>
 				<!--begin::Content-->
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-0">
@@ -56,18 +56,6 @@
 								<input type="text" id="username" required="required" class="form-control form-control-lg " name="_username" value="{{ last_username }}"/>
 							</div>
 
-							<!--begin::Input wrapper-->
-							{# <div class="position-relative mb-3">
-								<input class="form-control form-control-lg" type="password" placeholder="" name="new_password" autocomplete="off" />
-
-								<span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" data-kt-password-meter-control="visibility">
-									<i class="bi bi-eye-slash fs-2"></i>
-									<i class="bi bi-eye fs-2 d-none"></i>
-								</span>
-
-							</div> #}
-							<!--end::Input wrapper-->
-
 							<div class="fv-row position-relative mb-5" data-kt-password-meter="true">
 								<div class="d-flex flex-stack mb-2">
 									<label class="form-label fw-bolder text-dark fs-6 mb-0">Mot de passe</label>
@@ -82,9 +70,9 @@
 							</div>
 
 							<div class="fv-row mb-5">
-								<label class="form-label fs-6 fw-bolder text-dark">Point de vente</label>
+								<label class="form-label fs-6 fw-bolder text-dark">Point de connexion</label>
 								<select id="poiunt_de_vente" name="poiunt_de_vente" required="required" data-control="select2" class="form-select fv-plugins-icon-input ">
-									<option value="" selected="selected">Sélectionnez un point de vente</option>
+									<option value="" selected="selected">Sélectionnez un point de connexion</option>
 									{% for pv in poiontventes %}
 										<option value="{{ pv.id }}" >{{ pv.libelle }}</option>
 									{% endfor %}
@@ -94,7 +82,7 @@
 							<!--begin::Actions-->
 							<div class="text-center">
 								<!--begin::Submit button-->
-								<button type="submit" class="btn btn-lg btn-primary w-100 mb-5">
+								<button type="submit" class="btn btn-lg w-100 mb-5" style="background-color: orange;">
 									<span class="indicator-label">Se connecter</span>
 									<span class="indicator-progress">Please wait...
 									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
@@ -123,17 +111,10 @@
 			</div>
 			<!--end::Authentication - Sign-in-->
 		</div>
-		<!--end::Root-->
-		<!--end::Main-->
-		<!--begin::Javascript-->
 		<script>var hostUrl = "assets/";</script>
 
 		<!--begin::Global Javascript Bundle(used by all pages)-->
 		<script src="{{ asset('assets/plugins/global/plugins.bundle.js') }}"></script>
 		<script src="{{ asset('assets/js/scripts.bundle.js') }}"></script>
-		<!--end::Global Javascript Bundle-->
-		<!--begin::Page Custom Javascript(used by this page)-->
-		{# <script src="{{ asset('assets/js/custom/authentication/sign-in/general.js') }}"></script> #}
 	</body>
-	<!--end::Body-->
 </html>
